First commited as before_104946_rev1