@@ -15,6 +15,7 @@ import java.io.InputStream;
 import java.net.URL;
 import java.util.zip.CRC32;
 import java.util.zip.CheckedInputStream;
+
 import org.eclipse.core.runtime.IBundleGroup;
 import org.eclipse.jface.resource.ImageDescriptor;
 import org.eclipse.ui.branding.IBundleGroupConstants;
@@ -92,7 +93,7 @@ public class AboutBundleGroupData extends AboutData {
 				}
 			}
 
-			featureImageCrc = Long.valueOf(checksum.getValue());
+            featureImageCrc = new Long(checksum.getValue());
             return featureImageCrc;
 
         } catch (IOException e) {
